# Nova-Rewards

./: .env  .env.vercel.example  .gitignore  ACCEPTANCE_CRITERIA_VERIFICATION.md  CLAUDE.md  ISSUE_TEMPLATES.md  ISSUE_TRACKING_GUIDE.md  JWT_EXPIRY_IMPLEMENTATION_SUMMARY.md  JWT_EXPIRY_INTEGRATION.md  PHASE_2_INFRASTRUCTURE_COMPLETE.md  PR_DESCRIPTION.md  README.md  ROADMAP.md  TODO.md  VALIDATION_AUDIT.md  VALIDATION_REPORT.md  package-lock.json  package.json
.github/workflows/: cd-staging.yml  ci.yml  container-registry.yml  db-backup.yml  deploy.yml  e2e.yml  fuzz.yml  k8s-deploy.yml  lighthouse.yml  nightly-regression.yml  preview-deployment.yml  sync-labels.yml  terraform-ci.yml  vercel-preview.yml  vercel-production.yml
.kiro/: E2E_DESIGN_COMPLETE.md  E2E_DESIGN_INDEX.md  E2E_DESIGN_PART1_FIXTURES.md  E2E_DESIGN_PART2_HELPERS.md  E2E_DESIGN_PART3_PAGE_OBJECTS.md  E2E_DESIGN_PART4_TEST_FLOW.md  E2E_DESIGN_PART5_SUMMARY.md  E2E_DESIGN_VISUAL.md
contracts/: Cargo.toml  README.md
contracts/admin_roles/: Cargo.toml
contracts/campaign/: Cargo.toml
contracts/contract_state/: Cargo.toml
contracts/distribution/: Cargo.toml
contracts/errors/: Cargo.toml
contracts/escrow/: Cargo.toml
contracts/fuzz/: Cargo.toml
contracts/fuzz/fuzz_targets/: fuzz_vesting.rs
contracts/governance/: Cargo.toml
contracts/integration_tests/: Cargo.toml
contracts/nova-rewards/: Cargo.toml
contracts/referral/: Cargo.toml
docs/: audit-checklist.md  contracts-full-reference.md  deployment.md  upgrade-guide.md
infra/: cloudwatch.tf  rds.tf  variables.tf
novaRewards/: .dockerignore  .env.example  .eslintrc.json  CI_CD_INFRASTRUCTURE.md  Dockerfile  docker-compose.yml  package-lock.json  package.json  tsconfig.json
scripts/: license-check.sh  reprocess-dlq.js
src/: app.module.ts
(+350 files in other folders)
